[gd_scene load_steps=3 format=3 uid="uid://drcry2o67hgrq"]

[ext_resource type="Script" uid="uid://bbkrtvevu2k83" path="res://scenes/menu/menu.gd" id="1_klgdb"]

[sub_resource type="LabelSettings" id="LabelSettings_klgdb"]
font_size = 48
font_color = Color(0.499925, 0.00017741, 0.499922, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_klgdb")

[node name="MainMenu" type="Window" parent="."]
auto_translate_mode = 1
initial_position = 2
size = Vector2i(473, 356)
wrap_controls = true

[node name="PanelContainer" type="PanelContainer" parent="MainMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 150

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Radio-s MAZE GAME"
label_settings = SubResource("LabelSettings_klgdb")
horizontal_alignment = 1

[node name="CreateServerButton" type="Button" parent="MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Create Server"

[node name="JoinServerButton" type="Button" parent="MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Join Server"

[node name="JoinServerMenu" type="Window" parent="."]
auto_translate_mode = 1
title = "Join Server"
initial_position = 2
size = Vector2i(473, 426)
visible = false
wrap_controls = true

[node name="PanelContainer" type="PanelContainer" parent="JoinServerMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="JoinServerMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MarginContainer" type="MarginContainer" parent="JoinServerMenu/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 150

[node name="GridContainer" type="GridContainer" parent="JoinServerMenu/PanelContainer/MarginContainer/MarginContainer"]
layout_mode = 2
columns = 2

[node name="IPAddressLabel" type="Label" parent="JoinServerMenu/PanelContainer/MarginContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "IP Address"

[node name="IPAddressJoinEdit" type="LineEdit" parent="JoinServerMenu/PanelContainer/MarginContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "10.30.1.130"

[node name="JoinServerButton" type="Button" parent="JoinServerMenu/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 40
text = "Join Server"

[connection signal="pressed" from="MainMenu/PanelContainer/MarginContainer/VBoxContainer/CreateServerButton" to="." method="_on_create_server_button_pressed"]
[connection signal="pressed" from="MainMenu/PanelContainer/MarginContainer/VBoxContainer/JoinServerButton" to="." method="_on_join_server_button_pressed"]
[connection signal="pressed" from="JoinServerMenu/PanelContainer/MarginContainer/JoinServerButton" to="." method="_on_join_server_window_join_button_pressed"]
